# bwapi-c

./: .appveyor.yml  .travis.yml  CMakeLists.txt  FindBWAPI.cmake  README.md  appveyor.yml
example/: Client.c  Dll.c  Dll.cpp
include/: AIModule.h  Bullet.h  BwString.h  Client.h  Event.h  Force.h  Game.h  Iterator.h  Player.h  Region.h  String.h  Types.h  Unit.h
src/: AIModule.cpp  Bullet.cpp  BulletType.hpp  BwString.cpp  Cast.hpp  Client.cpp  Color.hpp  CoordinateType.hpp  Error.hpp  Event.cpp  Force.cpp  Game.cpp  GameType.hpp  Input.hpp  Interface.hpp  Iterator.cpp  IteratorImpl.hpp  Order.hpp  Player.cpp  PlayerType.hpp  Position.hpp  Race.hpp  Region.cpp  String.cpp  TechType.hpp  Unit.cpp  UnitCommand.hpp  UnitType.hpp  UpgradeType.hpp  WeaponType.hpp
